log
Thu 16 May 2024 05:01:02 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:28: error: implicit declaration of function ‘isValid’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
   59 |                        if (isValid(n, i,j,num)) {
      |                            ^~~~~~~
      |                            is_valid
sudoku.c:62:28: error: implicit declaration of function ‘addToList’ [-Werror=implicit-function-declaration]
   62 |                            addToList(list, newNode);
      |                            ^~~~~~~~~
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
At top level:
sudoku.c:53:10: error: ‘get_adj_nodes’ defined but not used [-Werror=unused-function]
   53 |    List* get_adj_nodes(Node* n) {
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e5e1511
Thu 16 May 2024 05:14:48 PM UTC: 
 sudoku.c | 31 ++++++++++++++++++++-----------
 1 file changed, 20 insertions(+), 11 deletions(-)
test.c: In function ‘test_isvalid’:
test.c:112:9: error: implicit declaration of function ‘is_valid’; did you mean ‘isValid’? [-Werror=implicit-function-declaration]
  112 |     if(!is_valid(initial)){
      |         ^~~~~~~~
      |         isValid
cc1: all warnings being treated as errors
Compilation failed
0066868
Thu 16 May 2024 05:15:51 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘test_isvalid’:
test.c:112:9: error: too few arguments to function ‘is_valid’
  112 |     if(!is_valid(initial)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* node, int row, int col, int num) {
      |     ^~~~~~~~
test.c:120:8: error: too few arguments to function ‘is_valid’
  120 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* node, int row, int col, int num) {
      |     ^~~~~~~~
test.c:131:8: error: too few arguments to function ‘is_valid’
  131 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* node, int row, int col, int num) {
      |     ^~~~~~~~
test.c:141:8: error: too few arguments to function ‘is_valid’
  141 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* node, int row, int col, int num) {
      |     ^~~~~~~~
test.c: In function ‘test_dfs’:
test.c:213:9: error: too few arguments to function ‘is_valid’
  213 |     if(!is_valid(final)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* node, int row, int col, int num) {
      |     ^~~~~~~~
Compilation failed
cdf89ce
Thu 16 May 2024 05:47:09 PM UTC: 
 sudoku.c | 56 +++++++++++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 45 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
581bcda
Thu 16 May 2024 05:51:22 PM UTC: 
 sudoku.c | 47 ++++++++++++++---------------------------------
 1 file changed, 14 insertions(+), 33 deletions(-)
 tests:  6|2
total_score: 45/70
e1ed32f
Thu 16 May 2024 06:03:32 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
69c7720
Thu 16 May 2024 06:24:54 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:109:11: error: unused variable ‘stack’ [-Werror=unused-variable]
  109 |    Stack *stack = createStack();
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1c1d10c
Thu 16 May 2024 06:48:12 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:113:22: error: void value not ignored as it ought to be
  113 |          Node* aux = pop(stack);
      |                      ^~~
sudoku.c:119:29: error: void value not ignored as it ought to be
  119 |                Node* aux2 = pop(list);
      |                             ^~~
Compilation failed
c76ae6f
Thu 16 May 2024 07:37:37 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:121:29: error: initialization of ‘Node *’ from incompatible pointer type ‘List *’ [-Werror=incompatible-pointer-types]
  121 |                Node* aux2 = (list);
      |                             ^
cc1: all warnings being treated as errors
Compilation failed
fad29b6
Thu 16 May 2024 07:38:18 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
80d7291
Thu 16 May 2024 07:43:27 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9bb54ae
Thu 16 May 2024 07:46:21 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c7b423c
Thu 16 May 2024 07:53:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
41e8ab1
Thu 16 May 2024 07:55:12 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
19c7f23
Thu 16 May 2024 07:58:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8ec7000
Thu 16 May 2024 08:04:19 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
16b8615
Thu 16 May 2024 08:07:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9fe75bf
Thu 16 May 2024 08:18:49 PM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
76527c7
Thu 16 May 2024 09:10:02 PM UTC: 
 sudoku.c | 22 ++++++++++------------
 1 file changed, 10 insertions(+), 12 deletions(-)
 tests:  0|0
178f362
Thu 16 May 2024 09:13:52 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
91f80e1
Thu 16 May 2024 09:15:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a3208d1
Thu 16 May 2024 09:18:10 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:118:19: error: variable ‘adj’ set but not used [-Werror=unused-but-set-variable]
  118 |            Node * adj = first(list);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
4452bb5
